@@ -36,7 +36,7 @@ ASRR is a <A HREF="http://www.r-project.org/">R</A> package. It aims to provide 
 
 <h1>More...</h1>
 <p>The project summary page you can find <A HREF="http://r-forge.r-project.org/projects/asrr/">Here</A>.
-<p>Homepage of <A HREF="http://ronggui.huang.googlepages.com/">the author</A>.
+<p>Homepage of <A HREF="rghuang.html">the author</A>.
 Other package by me: <A HREF="http://rqda.r-forge.r-project.org/">RQDA</A>.
 
 </BODY>
